--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="menu_torneos">Torneos</string>
     <string name="menu_jugadores">Jugadores</string>
     <string name="menu_inscripciones">Inscripciones</string>
-    <string name="menu_mapa">Mapa</string>
+    <string name="menu_mapa">Mapa interactivo</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="inscribirse">Inscribirse</string>
     <string name="ver_partidas">Ver Partidas</string>
