--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,13 @@
     <string name="ver_partidas">Ver Partidas</string>
     <string name="detalle_torneo">Detalle Torneo</string>
     <string name="estrella">Estrella</string>
+    <string name="title_activity_login">Torneos de Ajedréz</string>
+    <string name="prompt_email">Correo electrónico</string>
+    <string name="prompt_password">Contraseña</string>
+    <string name="action_sign_in">Ingresar o registrarse</string>
+    <string name="action_sign_in_short">Ingresar</string>
+    <string name="welcome">"¡Bienvenido!"</string>
+    <string name="invalid_username">Usuario no válido</string>
+    <string name="invalid_password">Contraseña demasiado corta</string>
+    <string name="login_failed">"Inicio de sesión fallido"</string>
 </resources>
