Filtro de marcadores listo
Ahora en el mapa se pueden filtrar los marcadores según su nombre o categoría.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="ver_partidas">Ver Partidas</string>
     <string name="detalle_torneo">Detalle Torneo</string>
     <string name="estrella">Estrella</string>
+    <string name="filtro">Filtro</string>
 </resources>
