--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="invalid_username">Usuario no válido</string>
     <string name="invalid_password">Contraseña demasiado corta</string>
     <string name="login_failed">"Inicio de sesión fallido"</string>
+    <string name="click_to_register">No tengo cuenta</string>
 </resources>
