--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,11 +24,16 @@
     <string name="action_sign_in_short">Ingresar</string>
     <string name="welcome">"¡Bienvenido!"</string>
     <string name="invalid_username">Usuario no válido</string>
-    <string name="invalid_password">Contraseña demasiado corta</string>
+    <string name="invalid_password">La contraseña debe tener al menos 8 caracteres e incluir una mayúscula, una minúscula y un número</string>
     <string name="login_failed">"Inicio de sesión fallido"</string>
     <string name="click_to_register">No tengo cuenta</string>
     <string name="full_name">Nombre completo</string>
     <string name="password_confirm">Confirmar contraseña</string>
     <string name="already_have_account">Ya tengo cuenta</string>
     <string name="action_register">Registrar</string>
+
+    <string name="invalid_full_name">Ingrese nombre completo</string>
+    <string name="invalid_email">Correo inválido</string>
+    <string name="passwords_not_match">Las contraseñas no coinciden</string>
+
 </resources>
