--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="navigation_drawer_open">Abrir navigation drawer</string>
     <string name="navigation_drawer_close">Cerrar navigation drawer</string>
     <string name="nav_header_title">Torneos de Ajedrez</string>
-    <string name="nav_header_desc">Navigation header</string>
+    <string name="nav_header_desc">Navigación</string>
     <string name="action_settings">Configuración</string>
 
     <string name="menu_inicio">Inicio</string>
@@ -23,7 +23,7 @@
     <string name="action_sign_in">Ingresar o registrarse</string>
     <string name="action_sign_in_short">Ingresar</string>
     <string name="welcome">"¡Bienvenido!"</string>
-    <string name="invalid_username">Usuario no válido</string>
+    <string name="invalid_username">Formato de correo no válido</string>
     <string name="invalid_password">La contraseña debe tener al menos 8 caracteres e incluir una mayúscula, una minúscula y un número</string>
     <string name="login_failed">"Inicio de sesión fallido"</string>
     <string name="click_to_register">No tengo cuenta</string>
