--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,9 @@
     <string name="passwords_not_match">Las contraseñas no coinciden</string>
     <string name="login_with_google">Ingresar con Google </string>
 
+    <string name="google_sign_in">Ingresar con Google </string>
+
+
 
 
 </resources>
