--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="invalid_username">Formato de correo no válido</string>
     <string name="invalid_password">La contraseña debe tener al menos 8 caracteres e incluir una mayúscula, una minúscula y un número</string>
     <string name="login_failed">"Inicio de sesión fallido"</string>
-    <string name="click_to_register">Crear cuenta</string>
+    <string name="click_to_register">No tengo cuenta</string>
     <string name="full_name">Nombre completo</string>
     <string name="password_confirm">Confirmar contraseña</string>
     <string name="already_have_account">Ya tengo cuenta</string>
@@ -39,7 +39,5 @@
 
     <string name="google_sign_in">Ingresar con Google </string>
 
-
-
-
+    <string name="default_web_client_id">1017845911463-lpivt8jtt099nskh62b4696vmi43ncpv.apps.googleusercontent.com</string>
 </resources>
