feat: mejorar registro de usuario con validación de email y contraseña, y optimización de la interfaz

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,8 @@
     <string name="estrella">Estrella</string>
     <string name="filtro">Filtro</string>
     <string name="title_activity_login">Torneos de Ajedrez</string>
-    <string name="prompt_email">Correo electrónico</string>
-    <string name="prompt_password">Contraseña</string>
+    <string name="email">Correo electrónico</string>
+    <string name="password">Contraseña</string>
     <string name="action_sign_in">Ingresar o registrarse</string>
     <string name="action_sign_in_short">Ingresar</string>
     <string name="welcome">"¡Bienvenido!"</string>
@@ -31,6 +31,7 @@
     <string name="password_confirm">Confirmar contraseña</string>
     <string name="already_have_account">Ya tengo cuenta</string>
     <string name="action_register">Registrar</string>
+    <string name="create_account">Crear cuenta</string>
 
     <string name="invalid_full_name">Ingrese nombre completo</string>
     <string name="invalid_email">Correo inválido</string>
